Almost ready for Cobalt 0.1